Setup static site

--- a/site/index.html
+++ b/site/index.html
@@ -12,6 +12,6 @@
         <span class="title"></span>
     </template>
 
-    <script src="reports.js"></script>
+    <script src="items.js"></script>
 </body>
 </html>
