Setup static site

--- a/site/index.html
+++ b/site/index.html
@@ -7,9 +7,10 @@
 <body>
 
     <h1>My Items</h1>
+    <ul></ul>
 
     <template id="item">
-        <span class="title"></span>
+        <li class="title"></li>
     </template>
 
     <script src="items.js"></script>
