Add New Feature

--- a/site/index.html
+++ b/site/index.html
@@ -13,6 +13,8 @@
         <li class="title"></li>
     </template>
 
+    <p>I ❤️ New Features</p>
+
     <script src="items.js"></script>
 </body>
 </html>
